@startuml

title __THREADS_CHALLENGE's Class Diagram__\n

  package com.company {
    class Agent {
    }
  }
  

  package com.company {
    class Cashier {
    }
  }
  

  package com.company {
    class Client {
    }
  }
  

  package com.company {
    class Director {
    }
  }
  

  package com.company {
    class Dispatcher {
    }
  }
  

  package com.company {
    class Main {
    }
  }
  

  package com.company {
    class Supervisor {
    }
  }
  

  Agent -up-|> Supplier
  Agent o-- Client : client
  Cashier -up-|> Agent
  Director -up-|> Agent
  Supervisor -up-|> Agent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
